[环境的搭建]

--- a/Server/Server/Server.vcxproj.filters
+++ b/Server/Server/Server.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="clog.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="dtlsv1.x.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="clog.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="dtlsv1.x.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
