--- a/Server/Server/Server.vcxproj
+++ b/Server/Server/Server.vcxproj
@@ -22,32 +22,32 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{FCB7DF69-2F77-49DC-8094-A76ECD0357BB}</ProjectGuid>
     <RootNamespace>Server</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
@@ -71,14 +71,14 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IntDir>..\vsout\$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>$(C_INCLUDE)\libuv\include;$(C_INCLUDE)\usrsctplib\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(C_INCLUDE)\libuv\lib\x64\Debug;$(C_INCLUDE)\usrsctplib\lib\x64\Debug;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(C_INCLUDE)\libuv\include;$(C_INCLUDE)\boost_1_79_0\include;$(C_INCLUDE)\OpenSSL-Win64\include;$(C_INCLUDE)\usrsctplib\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(C_INCLUDE)\OpenSSL-Win64\lib;$(C_INCLUDE)\boost_1_79_0\lib;$(C_INCLUDE)\libuv\lib\x64\Debug;$(C_INCLUDE)\usrsctplib\lib\x64\Debug;$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IntDir>..\vsout\$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>$(C_INCLUDE)\libuv\include;$(C_INCLUDE)\usrsctplib\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(C_INCLUDE)\libuv\lib\x64\Release;$(C_INCLUDE)\usrsctplib\lib\x64\Release;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(C_INCLUDE)\boost_1_79_0\include;$(C_INCLUDE)\libuv\include;$(C_INCLUDE)\OpenSSL-Win64\include;$(C_INCLUDE)\usrsctplib\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(C_INCLUDE)\boost_1_79_0\lib;$(C_INCLUDE)\libuv\lib\x64\Release;$(C_INCLUDE)\OpenSSL-Win64\lib;$(C_INCLUDE)\usrsctplib\lib\x64\Release;$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -101,7 +101,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>usrsctp.lib;uv_a.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libssl.lib;libcrypto.lib;usrsctp.lib;uv_a.lib;libboost_atomic-vc142-mt-gd-x64-1_79.lib;libboost_chrono-vc142-mt-gd-x64-1_79.lib;libboost_container-vc142-mt-gd-x64-1_79.lib;libboost_context-vc142-mt-gd-x64-1_79.lib;libboost_contract-vc142-mt-gd-x64-1_79.lib;libboost_coroutine-vc142-mt-gd-x64-1_79.lib;libboost_date_time-vc142-mt-gd-x64-1_79.lib;libboost_exception-vc142-mt-gd-x64-1_79.lib;libboost_fiber-vc142-mt-gd-x64-1_79.lib;libboost_filesystem-vc142-mt-gd-x64-1_79.lib;libboost_graph-vc142-mt-gd-x64-1_79.lib;libboost_iostreams-vc142-mt-gd-x64-1_79.lib;libboost_json-vc142-mt-gd-x64-1_79.lib;libboost_locale-vc142-mt-gd-x64-1_79.lib;libboost_log-vc142-mt-gd-x64-1_79.lib;libboost_log_setup-vc142-mt-gd-x64-1_79.lib;libboost_math_c99-vc142-mt-gd-x64-1_79.lib;libboost_math_c99f-vc142-mt-gd-x64-1_79.lib;libboost_math_c99l-vc142-mt-gd-x64-1_79.lib;libboost_math_tr1-vc142-mt-gd-x64-1_79.lib;libboost_math_tr1f-vc142-mt-gd-x64-1_79.lib;libboost_math_tr1l-vc142-mt-gd-x64-1_79.lib;libboost_nowide-vc142-mt-gd-x64-1_79.lib;libboost_prg_exec_monitor-vc142-mt-gd-x64-1_79.lib;libboost_program_options-vc142-mt-gd-x64-1_79.lib;libboost_python27-vc142-mt-gd-x64-1_79.lib;libboost_random-vc142-mt-gd-x64-1_79.lib;libboost_regex-vc142-mt-gd-x64-1_79.lib;libboost_serialization-vc142-mt-gd-x64-1_79.lib;libboost_stacktrace_noop-vc142-mt-gd-x64-1_79.lib;libboost_stacktrace_windbg-vc142-mt-gd-x64-1_79.lib;libboost_stacktrace_windbg_cached-vc142-mt-gd-x64-1_79.lib;libboost_system-vc142-mt-gd-x64-1_79.lib;libboost_test_exec_monitor-vc142-mt-gd-x64-1_79.lib;libboost_thread-vc142-mt-gd-x64-1_79.lib;libboost_timer-vc142-mt-gd-x64-1_79.lib;libboost_type_erasure-vc142-mt-gd-x64-1_79.lib;libboost_unit_test_framework-vc142-mt-gd-x64-1_79.lib;libboost_wave-vc142-mt-gd-x64-1_79.lib;libboost_wserialization-vc142-mt-gd-x64-1_79.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -132,11 +132,17 @@
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>usrsctp.lib;uv_a.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libssl.lib;libcrypto.lib;usrsctp.lib;uv_a.lib;libboost_atomic-vc142-mt-x64-1_79.lib;libboost_chrono-vc142-mt-x64-1_79.lib;libboost_container-vc142-mt-x64-1_79.lib;libboost_context-vc142-mt-x64-1_79.lib;libboost_contract-vc142-mt-x64-1_79.lib;libboost_coroutine-vc142-mt-x64-1_79.lib;libboost_date_time-vc142-mt-x64-1_79.lib;libboost_exception-vc142-mt-x64-1_79.lib;libboost_fiber-vc142-mt-x64-1_79.lib;libboost_filesystem-vc142-mt-x64-1_79.lib;libboost_graph-vc142-mt-x64-1_79.lib;libboost_iostreams-vc142-mt-x64-1_79.lib;libboost_json-vc142-mt-x64-1_79.lib;libboost_locale-vc142-mt-x64-1_79.lib;libboost_log-vc142-mt-x64-1_79.lib;libboost_log_setup-vc142-mt-x64-1_79.lib;libboost_math_c99-vc142-mt-x64-1_79.lib;libboost_math_c99f-vc142-mt-x64-1_79.lib;libboost_math_c99l-vc142-mt-x64-1_79.lib;libboost_math_tr1-vc142-mt-x64-1_79.lib;libboost_math_tr1f-vc142-mt-x64-1_79.lib;libboost_math_tr1l-vc142-mt-x64-1_79.lib;libboost_nowide-vc142-mt-x64-1_79.lib;libboost_prg_exec_monitor-vc142-mt-x64-1_79.lib;libboost_program_options-vc142-mt-x64-1_79.lib;libboost_python27-vc142-mt-x64-1_79.lib;libboost_random-vc142-mt-x64-1_79.lib;libboost_regex-vc142-mt-x64-1_79.lib;libboost_serialization-vc142-mt-x64-1_79.lib;libboost_stacktrace_noop-vc142-mt-x64-1_79.lib;libboost_stacktrace_windbg-vc142-mt-x64-1_79.lib;libboost_stacktrace_windbg_cached-vc142-mt-x64-1_79.lib;libboost_system-vc142-mt-x64-1_79.lib;libboost_test_exec_monitor-vc142-mt-x64-1_79.lib;libboost_thread-vc142-mt-x64-1_79.lib;libboost_timer-vc142-mt-x64-1_79.lib;libboost_type_erasure-vc142-mt-x64-1_79.lib;libboost_unit_test_framework-vc142-mt-x64-1_79.lib;libboost_wave-vc142-mt-x64-1_79.lib;libboost_wserialization-vc142-mt-x64-1_79.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="clog.c" />
+    <ClCompile Include="dtlsv1.x.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="clog.h" />
+    <ClInclude Include="dtlsv1.x.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
